--- a/API/package.json
+++ b/API/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.2",
     "lodash": "^4.17.4",
     "mongoose": "^4.13.4",
+    "node-fetch": "^1.7.3",
     "nodemon": "^1.12.1"
   }
 }
