--- a/API/package.json
+++ b/API/package.json
@@ -19,6 +19,9 @@
     "lodash": "^4.17.4",
     "mongoose": "^4.13.4",
     "node-fetch": "^1.7.3",
-    "nodemon": "^1.12.1"
+    "nodemon": "^1.12.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.4.0"
   }
 }
